# traktstats

./: .gitignore  README.md  all_time_totals_page.py  bubblechart.py  cast_page.py  crew_page.py  getData.py  movies_page.py  movies_page1.ui  movies_page2.ui  movies_page3.ui  movies_page4.ui  movies_page5.ui  movies_page6.ui  movies_page7.ui  movies_page8.ui  mplwidget.py  parseData.py  pyproject.toml  requirements.txt  tvshow_page.py  tvshow_page1.ui  tvshow_page2.ui  tvshow_page3.ui  tvshow_page4.ui  tvshow_page5.ui  tvshow_page6.ui  tvshow_page8.ui  ui.py
