[tool.poetry]
name = "traktstats"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dotmap = "1.3.30"
matplotlib = "3.5.2"
merry = "0.3.0"
numpy = "1.22.4"
pillow = "9.2.0"
plotly = "5.9.0"
pyqt5 = "5.15.7"
rapidfuzz = "2.0.15"
requests = "2.28.0"
tmdbv3api = "1.7.7"
tqdm = "4.64.0"
pyqtwebengine = "^5.15.6"
joblib = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
